Cleanup mainly for querydsl-sql-codegen